# private_chef

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  start-dev.sh  start-prod.sh
app/: main.py
app/agents/: private_chef.py
app/api/v1/: chat.py  oss.py
app/services/: chat_service.py
deploy/: Dockerfile  docker-compose.yml
deploy/nginx/: Dockerfile  nginx.conf
